# Octoprint

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  SETUP.md  TEMPERATURE_FIX.md  package-lock.json  package.json
.claude/: settings.local.json
.claude/skills/add-api-endpoint/: SKILL.md
.claude/skills/add-printer-command/: SKILL.md
.claude/skills/debug-printer/: SKILL.md
.claude/skills/deploy-pi-staging/: SKILL.md
.github/workflows/: ci.yml
frontend-design/: SKILL.md
frontend-design-workspace/: grade.py
frontend-design-workspace/eval-viewer/: generate_review.py  viewer.html
frontend-design-workspace/iteration-1/: benchmark.json  review.html
frontend-design/evals/: evals.json
printforge/: .gitignore  Makefile
printforge/backend/: pyproject.toml  requirements.txt
printforge/backend/app/: config.py  main.py
printforge/backend/app/api/: errors.py  filament.py  files.py  history.py  notifications.py  octoprint_compat.py  printer.py  settings.py  system.py  timelapse.py  websocket.py
printforge/backend/app/middleware/: auth.py
printforge/backend/app/printer/: command_guard.py  controller.py  error_log.py  gcode_parser.py  state.py
printforge/backend/app/serial/: bed_mesh.py  command_queue.py  connection.py  gcode_sender.py  mock.py  mock_connection.py  protocol.py  safety.py  temperature.py
printforge/backend/app/services/: camera.py  notifier.py  timelapse.py
printforge/backend/app/storage/: database.py  file_manager.py  models.py
printforge/backend/app/utils/: logger.py  paths.py  system_monitor.py
printforge/backend/tests/: conftest.py  mock_serial.py  test_auth.py  test_bed_mesh.py  test_command_guard.py  test_command_queue.py  test_config.py  test_database.py  test_file_manager.py  test_gcode_parser.py  test_gcode_sender.py  test_line_number_sync.py  test_mock_serial_integration.py  test_printer_state.py  test_protocol.py  test_review_fixes.py  test_safety.py  test_temperature.py
printforge/docs/: CAMERA_SETUP.md  SETUP_GUIDE.md  USB_POWER_WARNING.md
printforge/frontend/: eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
printforge/scripts/: cloudflare-setup.sh  deploy-staging.sh  deploy.sh  go2rtc.service  go2rtc.yaml  install-staging.sh  install.sh  printforge-staging.service  printforge.service  promote-staging.sh  sync-prod-config-to-staging.sh  tailscale-setup.sh  update.sh  ustreamer.service
printforge/tools/: auto_slice.py  config.toml  notifier.py  profile_loader.py  requirements.txt  slicer.py  start_watcher.bat  start_watcher.vbs  uploader.py
(+79 files in other folders)
